resuelvo correcciones del entregable 4
